移动端的学生添加

--- a/web-app/css/main_mobile.css
+++ b/web-app/css/main_mobile.css
@@ -60,9 +60,6 @@ a:hover {
     visibility: hidden;
 }
 
-.clearfix {
-    display: block;
-}
 
 .fl {
     float: left;
@@ -80,11 +77,9 @@ a:hover {
     display: none
 }
 a:link, a:visited {
-    color: #005EAC;
     text-decoration: none;
 }
 a:hover {
-    color: #005EAC;
     text-decoration: underline;
 }
 label select, label input, label textarea {
@@ -98,6 +93,16 @@ button, input[type="button"] {
     color: #FFFFFF;
     cursor: pointer;
     padding: 2px 5px;
+}
+.btn-block {
+    display: block;
+    width: 100%;
+}
+.btn-lg, .btn-group-lg > .btn {
+    border-radius: 6px;
+    font-size: 18px;
+    line-height: 1.33;
+    padding: 10px 16px;
 }
 
 .input-button, .input-submit {
@@ -129,8 +134,8 @@ input.gray {
 }
 
 .page-title{
-    height:60px;
-    padding: 10px 10px;
+
+    padding: 0 10px;
 }
 
 .page-title h2{
@@ -141,7 +146,7 @@ input.gray {
 
 .page-content{
     position:absolute;
-    top:60px;
+    top:120px;
     bottom:0;
     overflow:auto;
     width: 100%;
@@ -167,7 +172,11 @@ input.gray {
     margin-bottom: 10px;
 }
 
-
+.page-list{
+    background:none;
+    margin:auto;
+    border:0;
+}
 
 input.input-text{
     padding:5px 0;border:1px solid #ccc;width:100%;color: rgb(136, 136, 136);
@@ -178,4 +187,129 @@ label.error {
     color: red;
     padding: 2px 8px;
     margin-top: 2px;
+}
+.navbar{
+    margin-bottom: 8px;
+}
+.list-group {
+    padding-left: 0;
+    margin-bottom: 2px;
+}
+.list-group-item {
+    position: relative;
+    display: block;
+    padding: 4px 6px;
+    margin-bottom: -1px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+.list-group-item:first-child {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+.list-group-item:last-child {
+    margin-bottom: 0;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+a.list-group-item,
+button.list-group-item {
+    color: #555;
+}
+a.list-group-item .list-group-item-heading,
+button.list-group-item .list-group-item-heading {
+    color: #333;
+}
+a.list-group-item:hover,
+button.list-group-item:hover,
+a.list-group-item:focus,
+button.list-group-item:focus {
+    color: #555;
+    text-decoration: none;
+    background-color: #f5f5f5;
+}
+
+.list-group {
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .075);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .075);
+}
+.list-group-item.active,
+.list-group-item.active:hover,
+.list-group-item.active:focus {
+    text-shadow: 0 -1px 0 #286090;
+    background-image: -webkit-linear-gradient(top, #337ab7 0%, #2b669a 100%);
+    background-image:      -o-linear-gradient(top, #337ab7 0%, #2b669a 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#337ab7), to(#2b669a));
+    background-image:         linear-gradient(to bottom, #337ab7 0%, #2b669a 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff337ab7', endColorstr='#ff2b669a', GradientType=0);
+    background-repeat: repeat-x;
+    border-color: #2b669a;
+}
+.list-group-item.active .badge,
+.list-group-item.active:hover .badge,
+.list-group-item.active:focus .badge {
+    text-shadow: none;
+}
+
+
+.bm-header{
+    background: #d4eaf7;
+}
+
+.bm-menu a{
+    display: block;
+    float: left;
+    margin: 2px;
+    padding: 20px 6px;
+    background: #0B90C4;
+    border: #fff;
+    color: #fff;
+    font-size: 12px;
+    text-align: center;
+    word-wrap: break-word;
+}
+
+
+@media (min-width: 320px) {
+    .page-content{
+        top:100px;
+    }
+}
+@media (min-width: 375px) {
+    .page-content{
+        top:110px;
+    }
+    .bm-menu a{
+        margin: 3px;
+        padding: 20px 10px;
+        font-size: 14px;
+    }
+}
+@media (min-width: 450px) {
+    .page-content{
+        top:130px;
+    }
+
+}
+@media (min-width: 500px) {
+    .page-content{
+        top:140px;
+    }
+    .bm-menu a{
+        margin: 4px;
+        padding: 30px 20px;
+        font-size: 18px;
+    }
+}
+@media (min-width: 600px) {
+    .page-content{
+        top:160px;
+    }
+    .bm-menu a{
+        margin: 5px;
+        padding: 40px 30px;
+        font-size: 20px;
+    }
 }
